Just the quote, last change of the day

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 title: Home
 layout: default
-quote-of-the-day: Set your heart upon your work but never its reward.
-quote-by: Krishna
+quote-of-the-day: There must be a secret message from Dumbledore hidden in the icing.
+quote-by: J. K. Rowling, Harry Potter and the Deathly Hallows
 ---
 
 <div class="row first-row">
