Changed First Post and Second and Removed Last line of Photos with comment

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ quote-by: J. K. Rowling, Harry Potter and the Deathly Hallows
 
 </div>
 
-<div class="row row-border">
+<!-- <div class="row row-border">
     <a href="{{site.baseurl}}{{site.posts[10].url}}">
         <div class="six columns news-piece news-piece-2 border" style="background-image:url({{site.baseurl}}/img/{{site.posts[10].img}})">
             <p class="news-title">{{site.posts[9].title}}</p>
@@ -117,7 +117,7 @@ quote-by: J. K. Rowling, Harry Potter and the Deathly Hallows
          
     </a>
 
-</div>
+</div> -->
 
 
 
