forgot jpg tags

--- a/gallery.html
+++ b/gallery.html
@@ -4,20 +4,19 @@ layout: post
 permalink: /gallery/
 ---
 
-<h2>Gallery</h2>
+<h2>A small collection of the many cakes we've created over the years</h2>
 
 <div class="row row-border">
    
-   <div class="four columns news-piece news-piece-2 border-2" style="background-image: url({{site.baseurl}}/img/aBlackForest);">
+    <div class="four columns news-piece news-piece-2 border-2" style="background-image: url({{site.baseurl}}/img/aBlackForest.jpg);">
     <p class="news-title">{{Black Forest Tort}}</p>
-     </div>
+    </div>
 
-   <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aBlushBliss);"> 
+    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aBlushBliss.jpg);"> 
     <p class="news-title">{{Blush Bliss Cake}}</p>
-     </div>
+    </div>
 
-   
-   <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aThreeTeir);"> 
+    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aThreeTeir.jpg);"> 
     <p class="news-title">{{Three Teir Wedding}}</p>
-     </div>
+    </div>
 </div>
