more gallery testing

--- a/gallery.html
+++ b/gallery.html
@@ -8,15 +8,30 @@ permalink: /gallery/
 
 <div class="row row-border">
    
-    <div class="four columns news-piece news-piece-2 border-2" style="background-image: url({{site.baseurl}}/img/aBlackForest.jpg);">
+    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aBlackForest.jpg);">
     <p class="news-title">{{Black Forest Tort}}</p>
     </div>
 
-    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aBlushBliss.jpg);"> 
+    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aBlushBliss.jpg);"> 
     <p class="news-title">{{Blush Bliss Cake}}</p>
     </div>
 
     <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aThreeTeir.jpg);"> 
+    <p class="news-title">{{Three Teir Wedding}}</p>
+    </div>
+</div>
+
+<div class="row row-border">
+   
+    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aThreeTeir.jpg);">
+    <p class="news-title">{{Black Forest Tort}}</p>
+    </div>
+
+    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aBlushBliss.jpg);"> 
+    <p class="news-title">{{Blush Bliss Cake}}</p>
+    </div>
+
+    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aBlackForest.jpg);"> 
     <p class="news-title">{{Three Teir Wedding}}</p>
     </div>
 </div>
