picture change, gallery update

--- a/gallery.html
+++ b/gallery.html
@@ -16,22 +16,49 @@ permalink: /gallery/
     <p class="news-title">{{Blush Bliss Cake}}</p>
     </div>
 
-    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aThreeTeir.jpg);"> 
-    <p class="news-title">{{Three Teir Wedding}}</p>
+    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aBoyCake.jpg);"> 
+    <p class="news-title">{{Baby Boy}}</p>
     </div>
 </div>
 
 <div class="row row-border">
    
-    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aThreeTeir.jpg);">
-    <p class="news-title">{{Black Forest Tort}}</p>
+    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aChocStraw.jpg);">
+    <p class="news-title">{{Chocolate Dipped Strawberries}}</p>
     </div>
 
-    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aBlushBliss.jpg);"> 
-    <p class="news-title">{{Blush Bliss Cake}}</p>
+    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aChristmasCake.jpg);"> 
+    <p class="news-title">{{Christmas Cake}}</p>
     </div>
 
-    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aBlackForest.jpg);"> 
-    <p class="news-title">{{Three Teir Wedding}}</p>
+    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aGirlCake.jpg);"> 
+    <p class="news-title">{{Baby Girl}}</p>
     </div>
+</div>
+
+<div class="row row-border">
+   
+    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aRoseSquare.jpg);">
+    <p class="news-title">{{Square Wedding}}</p>
+    </div>
+
+    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aThreeTeir.jpg);"> 
+    <p class="news-title">3 Teir Wedding</p>
+    </div>
+
+    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aTwoCakes.jpg);"> 
+    <p class="news-title">{{Two Cakes}}</p>
+    </div>
+</div>
+
+
+<div class="row row-border">
+    <div class="six columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aWeddingTopper.jpg);">
+    <p class="news-title">{{Wedding Cake}}</p>
+    </div>
+
+    <div class="six columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/Unicorncupcakes.jpg);"> 
+    <p class="news-title">{{Unicorn Cupcakes}}</p>
+    </div>
+
 </div>
