capitalization is the worst

--- a/gallery.html
+++ b/gallery.html
@@ -57,7 +57,7 @@ permalink: /gallery/
     <p class="news-title">{{Wedding Cake}}</p>
     </div>
 
-    <div class="six columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/Unicorncupcakes.jpg);"> 
+    <div class="six columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/UnicornCupcakes.jpg);"> 
     <p class="news-title">{{Unicorn Cupcakes}}</p>
     </div>
 
