gallery spacing, color, and titles

--- a/gallery.html
+++ b/gallery.html
@@ -9,37 +9,37 @@ permalink: /gallery/
 <div class="row row-border">
    
     <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aBlackForest.jpg);">
-    <p class="news-title">{{Black Forest Tort}}</p>
+    <p class="news-title">Black Forest Tort</p>
     </div>
 
     <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aBlushBliss.jpg);"> 
-    <p class="news-title">{{Blush Bliss Cake}}</p>
+    <p class="news-title">Blush Bliss Cake</p>
     </div>
 
     <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aBoyCake.jpg);"> 
-    <p class="news-title">{{Baby Boy}}</p>
+    <p class="news-title">Baby Boy</p>
     </div>
 </div>
 
 <div class="row row-border">
    
     <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aChocStraw.jpg);">
-    <p class="news-title">{{Chocolate Dipped Strawberries}}</p>
+    <p class="news-title">Chocolate Dipped Strawberries</p>
     </div>
 
     <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aChristmasCake.jpg);"> 
-    <p class="news-title">{{Christmas Cake}}</p>
+    <p class="news-title">Christmas Cake}}</p>
     </div>
 
     <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aGirlCake.jpg);"> 
-    <p class="news-title">{{Baby Girl}}</p>
+    <p class="news-title">Baby Girl</p>
     </div>
 </div>
 
 <div class="row row-border">
    
     <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aRoseSquare.jpg);">
-    <p class="news-title">{{Square Wedding}}</p>
+    <p class="news-title">Square Wedding</p>
     </div>
 
     <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aThreeTeir.jpg);"> 
@@ -47,18 +47,18 @@ permalink: /gallery/
     </div>
 
     <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aTwoCakes.jpg);"> 
-    <p class="news-title">{{Two Cakes}}</p>
+    <p class="news-title">Two Cakes</p>
     </div>
 </div>
 
 
 <div class="row row-border">
     <div class="six columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aWeddingTopper.jpg);">
-    <p class="news-title">{{Wedding Cake}}</p>
+    <p class="news-title">Wedding Cake</p>
     </div>
 
-    <div class="six columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/UnicornCupcakes.jpg);"> 
-    <p class="news-title">{{Unicorn Cupcakes}}</p>
+    <div class="six columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/UnicornCupcakes.jpg);"> 
+    <p class="news-title">Unicorn Cupcakes</p>
     </div>
 
 </div>
