trying to restyle, and fix bottom error

--- a/gallery.html
+++ b/gallery.html
@@ -53,7 +53,7 @@ permalink: /gallery/
 
 
 <div class="row row-border">
-    <div class="six columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aWeddingTopper.jpg);">
+    <div class="six columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aWeddingTopper.jpg);">
     <p class="news-title">Wedding Cake</p>
     </div>
 
