gallery style, possibly breaking everything

--- a/gallery.html
+++ b/gallery.html
@@ -2,9 +2,12 @@
 title: Gallery
 layout: gala
 permalink: /gallery/
+img:FancySmash.png
 ---
 
-<h2>A small collection of the many cakes we've created over the years</h2>
+<h1> Gallery </h1>
+
+<h3>A small collection of the many cakes we've created over the years</h3>
 
 <div class="row row-border">
    
@@ -28,7 +31,7 @@ permalink: /gallery/
     </div>
 
     <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aChristmasCake.jpg);"> 
-    <p class="news-title">Christmas Cake}}</p>
+    <p class="news-title">Christmas Cake</p>
     </div>
 
     <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aGirlCake.jpg);"> 
@@ -49,16 +52,4 @@ permalink: /gallery/
     <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aTwoCakes.jpg);"> 
     <p class="news-title">Two Cakes</p>
     </div>
-</div>
-
-
-<div class="row row-border">
-    <div class="six columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aWeddingTopper.jpg);">
-    <p class="news-title">Wedding Cake</p>
-    </div>
-
-    <div class="six columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/UnicornCupcakes.jpg);"> 
-    <p class="news-title">Unicorn Cupcakes</p>
-    </div>
-
 </div>
