--- a/gallery.html
+++ b/gallery.html
@@ -2,12 +2,9 @@
 title: Gallery
 layout: gala
 permalink: /gallery/
-img:FancySmash.png
 ---
 
-<h1> Gallery </h1>
-
-<h3>A small collection of the many cakes we've created over the years</h3>
+<h2>A small collection of the many cakes we've created over the years</h2>
 
 <div class="row row-border">
    
@@ -31,7 +28,7 @@ img:FancySmash.png
     </div>
 
     <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aChristmasCake.jpg);"> 
-    <p class="news-title">Christmas Cake</p>
+    <p class="news-title">Christmas Cake}}</p>
     </div>
 
     <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aGirlCake.jpg);"> 
@@ -52,4 +49,16 @@ img:FancySmash.png
     <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aTwoCakes.jpg);"> 
     <p class="news-title">Two Cakes</p>
     </div>
+</div>
+
+
+<div class="row row-border">
+    <div class="six columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aWeddingTopper.jpg);">
+    <p class="news-title">Wedding Cake</p>
+    </div>
+
+    <div class="six columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/UnicornCupcakes.jpg);"> 
+    <p class="news-title">Unicorn Cupcakes</p>
+    </div>
+
 </div>
