updated picture for about, changed gallery to be more like post

--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,7 @@
 title: Gallery
 layout: gala
 permalink: /gallery/
+img: FancySmash.png
 ---
 
 <h2>A small collection of the many cakes we've created over the years</h2>
