--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@ img: FancySmash.png
     </div>
 
     <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aChristmasCake.jpg);"> 
-    <p class="news-title">Christmas Cake}}</p>
+    <p class="news-title">Christmas Cake</p>
     </div>
 
     <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aGirlCake.jpg);"> 
