--- a/gallery.html
+++ b/gallery.html
@@ -6,10 +6,11 @@ img: FancySmash.png
 ---
 
 <div class="row row-border">
-   
+   <a href="{{site.baseurl}}/img/aBlackForest.jpg>
     <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aBlackForest.jpg);">
     <p class="news-title">Black Forest Tort</p>
     </div>
+   <a>
 
     <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aBlushBliss.jpg);"> 
     <p class="news-title">Blush Bliss Cake</p>
