added the links to picture pages

--- a/gallery.html
+++ b/gallery.html
@@ -12,43 +12,57 @@ img: FancySmash.png
    		</div>
    </a>
 
-    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aBlushBliss.jpg);"> 
-    <p class="news-title">Blush Bliss Cake</p>
-    </div>
-
-    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aBoyCake.jpg);"> 
-    <p class="news-title">Baby Boy</p>
-    </div>
+   <a href="{{site.baseurl}}/img/aBlushBliss.jpg">
+	    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aBlushBliss.jpg);"> 
+	    <p class="news-title">Blush Bliss Cake</p>
+	    </div>
+	</a>
+	
+	<a href="{{site.baseurl}}/img/aBoyCake.jpg">    
+	    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aBoyCake.jpg);"> 
+	    <p class="news-title">Baby Boy</p>
+	    </div>
+	</a>    
 </div>
 
 <div class="row row-border">
-   
-    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aChocStraw.jpg);">
-    <p class="news-title">Chocolate Dipped Strawberries</p>
-    </div>
+	<a href="{{site.baseurl}}/img/aChocStraw.jpg">  
+	    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aChocStraw.jpg);">
+	    <p class="news-title">Chocolate Dipped Strawberries</p>
+	    </div>
+	</a>
 
-    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aChristmasCake.jpg);"> 
-    <p class="news-title">Christmas Cake</p>
-    </div>
+	<a href="{{site.baseurl}}/img/aChristmasCake.jpg">  
+	    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aChristmasCake.jpg);"> 
+	    <p class="news-title">Christmas Cake</p>
+	    </div>
+	</a>
 
-    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aGirlCake.jpg);"> 
-    <p class="news-title">Baby Girl</p>
-    </div>
+    <a href="{{site.baseurl}}/img/aGirlCake.jpg">  
+	    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aGirlCake.jpg);"> 
+	    <p class="news-title">Baby Girl</p>
+	    </div>
+	</a>
 </div>
 
 <div class="row row-border">
-   
-    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aRoseSquare.jpg);">
-    <p class="news-title">Square Wedding</p>
-    </div>
+	<a href="{{site.baseurl}}/img/aRoseSquare.jpg">  
+	    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aRoseSquare.jpg);">
+	    <p class="news-title">Square Wedding</p>
+	    </div>
+	</a>
 
-    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aThreeTeir.jpg);"> 
-    <p class="news-title">3 Teir Wedding</p>
-    </div>
+	<a href="{{site.baseurl}}/img/aThreeTeir.jpg">  
+	    <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/aThreeTeir.jpg);"> 
+	    <p class="news-title">3 Teir Wedding</p>
+	    </div>
+	</a>
 
-    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aTwoCakes.jpg);"> 
-    <p class="news-title">Two Cakes</p>
-    </div>
+    <a href="{{site.baseurl}}/img/aTwoCakes.jpg">  
+	    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/aTwoCakes.jpg);"> 
+	    <p class="news-title">Two Cakes</p>
+	    </div>
+	</a>
 </div>
 
 </div>
