changing from posts to permalinks

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ quote-by: J. K. Rowling, Harry Potter and the Deathly Hallows
 ---
 
 <div class="row first-row">
-<a href="{{site.baseurl}}{{site.posts[0].url}}">
-        <div class="eight columns news-piece news-piece-1 border" style="background-image: url({{site.baseurl}}/img/{{site.posts[0].img}})">
+<a href="{{site.baseurl}}/weddings">
+        <div class="eight columns news-piece news-piece-1 border" style="background-image: url({{site.baseurl}}/img/{{weddings.img}})">
         <p class="news-title">Wedding Cakes</p>
-        <p class="news-exp">{{site.posts[0].excerpt | strip_html | truncate: 45 }}</p>
+        <p class="news-exp">{{We'll do the cakes}}</p>
         </div>
 </a>
     
