more front page changes and wedding page update

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@ quote-by: J. K. Rowling, Harry Potter and the Deathly Hallows
 <a href="{{site.baseurl}}/weddings">
         <div class="eight columns news-piece news-piece-1 border" style="background-image: url({{site.baseurl}}/img/aThreeTeir.jpg)">
         <p class="news-title">Wedding Cakes</p>
-        <p class="news-exp">{{For your special day...}}</p>
+        <p class="news-exp">For your special day...</p>
         </div>
 </a>
     
-<a href="{{site.baseurl}}{{site.posts[1].url}}">
+<a href="{{site.baseurl}}/special">
     <div class="four columns news-piece news-piece-1" style="background-image: url({{site.baseurl}}/img/aBoyCake.jpg);">
      <p class="news-title">Special Occasion Cakes</p>
      <p class="news-exp">For any other day...</p>
