new files for bakedgoods and cookies and updated some index files

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@ quote-by: J. K. Rowling, Harry Potter and the Deathly Hallows
 </div>
 <div class="row row-border">
    
-   <a href="{{site.baseurl}}{{site.posts[2].url}}">
+   <a href="{{site.baseurl}}/cookies">
     <div class="four columns news-piece news-piece-2 border-2" style="background-image: url({{site.baseurl}}/img/SquatchCookie.jpg);">
     <p class="news-title">Decorated Cookies</p>
     <p class="news-exp">A fun way to celebrate...</p>
     </div>
      </a>
      
-    <a href="{{site.baseurl}}{{site.posts[3].url}}">
+    <a href="{{site.baseurl}}/bakedgoods">
     <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/EmojiDonut.jpg);"> 
     <p class="news-title">Pastries & Donuts</p>
     <p class="news-exp">If you don't like cake...</p>
