front page change pic

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ quote-by: J. K. Rowling, Harry Potter and the Deathly Hallows
 
 <div class="row first-row">
 <a href="{{site.baseurl}}/weddings">
-        <div class="eight columns news-piece news-piece-1 border" style="background-image: url({{site.baseurl}}/img/aThreeTeir.jpg)">
+        <div class="eight columns news-piece news-piece-1 border" style="background-image: url({{site.baseurl}}/img/aManyWedding.jpg)">
         <p class="news-title">Wedding Cakes</p>
         <p class="news-exp">For your special day...</p>
         </div>
