trying to set gallery words

--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,7 @@ title: Gallery
 layout: gala
 permalink: /gallery/
 img: FancySmash.png
+words: A small collection of the many cakes we've created over the years
 ---
 
 <div class="row row-border">
