about pic change, will it look good?

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ quote-by: J. K. Rowling, Harry Potter and the Deathly Hallows
     </a>
     
     <a href="{{site.baseurl}}/about">
-    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/QuestionMarkCake.jpg);"> 
+    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/BakeryPic.jpg);"> 
     <p class="news-title">About</p>
     <p class="news-exp">More about us</p>
     </div>
