changed file type of one image, changed size of monster images, updated the content to go with file type

--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 title: Gallery
 layout: gala
 permalink: /gallery/
-img: FancySmash.png
+img: FancySmash.jpg
 words: A small collection of the many cakes we've created over the years
 ---
 
