--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ quote-by: J. K. Rowling, Harry Potter and the Deathly Hallows
      
     <a href="{{site.baseurl}}/bakedgoods">
     <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/EmojiDonut.jpg);"> 
-    <p class="news-title">Pastries & Donuts</p>
+    <p class="news-title">Pastries & Doughnuts</p>
     <p class="news-exp">Even if you don't like cake...</p>
     </div>
     </a>
